syntax = "proto3";

package datanodepb;

option go_package = "api/datanodepb";

message WriteRequest {
    int32 stage = 1;
    repeated int32 moves = 2;
    repeated int32 players = 3;
}

message WriteResponse {
    int32 result = 1;
}

message ReadRequest {
    int32 stage = 1;
    int32 player = 2;
}

message ReadResponse {
    repeated int32 moves_stage1 = 1;
    int32 move_stage2 = 2;
    int32 move_stage3 = 3;
}

service DatanodeService{
    rpc Write (WriteRequest) returns (WriteResponse) {};
    rpc Read (ReadRequest) returns (ReadResponse) {};
}